Adding auth to ig serve